--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         restart: unless-stopped
         ports: 
             - 8180:80
-            - 514:514/udp
+            #- 514:514/udp
         volumes:
             - conf:/var/nedi/conf
         hostname: 'nedi'
